<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.android.sparkstories.binding.Converter" />

        <variable
            name="hasResults"
            type="boolean" />

        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.stories.StoriesViewModel" />

        <variable
            name="listAdapter"
            type="com.example.android.sparkstories.ui.stories.StoryAdapter" />

        <variable
            name="isLoading"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stories_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/table_top_port"
        tools:context=".ui.stories.StoriesFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_stories_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.WriteItSayItHearIt.FilterTextInputLayout"
            app:layout_constraintBottom_toTopOf="@id/progress_bar_cues"
            app:layout_constraintEnd_toStartOf="@id/sort_order_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sort_order_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_stories_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_stories"
                android:imeOptions="actionDone"
                android:text="@={viewmodel.queryParameters.filterString}"
                android:theme="@style/Theme.WriteItSayItHearIt.FilterEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sort_order_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:entries="@{@stringArray/sort_order}"
            app:layout_constraintBottom_toTopOf="@id/progress_bar_cues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/filter_stories_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/filter_stories_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:onItemSelected="@{(selection) -> viewmodel.queryParameters.setSortOrder(Converter.toSortOrder(selection)) }"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar_cues"
            visibleGone="@{isLoading}"
            style="?android:attr/progressBarStyleHorizontal"
            android:orientation="horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondaryDarkColor"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/filter_stories_layout"
            app:layout_constraintBottom_toTopOf="@id/stories_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stories_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{listAdapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar_cues"
            tools:listItem="@layout/story_list_item" />

        <TextView
            android:id="@+id/no_results"
            style="@style/Theme.WriteItSayItHearIt.NoResultsFoundStyle"
            visibleGone="@{!hasResults}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
