...
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_barrier">

                <com.example.android.sparkstories.views.ScaleTextInputEditText
                    style="@style/Theme.WriteItSayItHearIt.CardText"
                    android:id="@+id/new_story_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="@dimen/padding_small"
                    android:background="@null"
                    android:gravity="top"
                    android:inputType="textMultiLine"
...
