<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="story"
            type="com.example.android.sparkstories.model.story.Story" />

        <variable
            name="cue"
            type="com.example.android.sparkstories.model.cue.Cue" />

        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.stories.StoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/story_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.stories.StoryFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/story_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:paddingStart="@dimen/padding_regular"
                android:paddingLeft="@dimen/padding_regular"
                android:paddingEnd="@dimen/padding_regular"
                android:paddingRight="@dimen/padding_regular">

                <TextView
                    style="@style/Theme.WriteItSayItHearIt.CardText"
                    android:id="@+id/story_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(story.rating)}"
                    android:layout_marginEnd="@dimen/margin_regular"
                    android:layout_marginRight="@dimen/margin_regular"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/first_row"
                    app:layout_constraintEnd_toStartOf="@id/story_datetime"
                    app:layout_constraintRight_toLeftOf="@id/story_datetime"
                    android:textSize="@dimen/text_size_rating"
                    tools:text="23" />

                <include
                    android:id="@+id/story_datetime"
                    layout="@layout/date_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/first_row"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:datable="@{story}" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/first_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="story_rating, story_datetime" />

                <TextView
                    android:id="@+id/story_author"
                    style="@style/Theme.WriteItSayItHearIt.CardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{story.author}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_row"
                    tools:text="John Doe" />

                <ImageButton
                    android:id="@+id/like_story_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_favorite_black_24dp"
                    android:onClick="@{() -> viewmodel.onLikeStoryClick()}" />

                <ImageButton
                    android:id="@+id/view_cue_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/like_story_button"
                    app:layout_constraintLeft_toRightOf="@id/like_story_button"
                    app:srcCompat="@drawable/ic_action_cues_black_24dp"
                    android:onClick="@{() -> viewmodel.onShowCueClick()}" />

                <ImageButton
                    android:id="@+id/story_comments_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/view_cue_button"
                    app:layout_constraintLeft_toRightOf="@id/view_cue_button"
                    app:srcCompat="@drawable/ic_comment_black_24dp"
                    android:onClick="@{() -> viewmodel.onViewCommentsClick()}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/top_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="story_top_menu" />

        <ScrollView
            android:id="@+id/story_text_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/top_barrier"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.example.android.sparkstories.views.ScaleTextView
                android:id="@+id/story_text_view"
                app:onDoubleClickListener="@{viewmodel.toggleTopMenuDoubleClickListener()}"
                android:textColor="@color/secondaryTextColor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/padding_small"
                android:text="@{story.text}"
                tools:text="@string/story_lorem_ipsum" />

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
